# pb2-plugins

./: .gitignore  INSTALLATION_GUIDE.md  MIGRATION.md  README.md
.claude-plugin/: marketplace.json
dana-page-builder/: .gitignore  CHANGELOG.md  README.md  requirements.txt
dana-page-builder/.claude-plugin/: plugin.json
dana-page-builder/agents/: dana-page-builder.md
dana-page-builder/commands/: batch-generate.md  cleanup.md  generate.md  setup-from-private.md  start-server.md
dana-page-builder/data/: products.json
dana-page-builder/scripts/: ai_color_extractor_dana.py  cleanup.py  compare_mappings.py  config.py  config.py.backup_20251020_134017  (+13 more)
pb-product-generator-plugin/: CHANGELOG.md  INSTALLATION.md  PRIVATE_SETUP.md.template  README.md  setup.sh
pb2-page-builder/: .env.example  .gitignore  CHANGELOG.md  ONBOARDING.md  README.md  requirements.txt  setup.sh
pb_pb2_deploy 3/: README.md  USAGE_GUIDE.md  generate_figma_batch.py  generate_figma_editable_v2.py  generate_figma_editable_v4.py  generate_figma_editable_v4_batch.py  generate_figma_final.py  generate_figma_html.py  layout_renderer.py
pb_pb2_deploy_20251017_layout/: README.md  pyproject.toml
pb_pb2_deploy_20251017_layout/examples/: README.md
pb_pb2_deploy_20251017_layout/examples/archive/: generate_figma_editable_v3.py  generate_test_html.py
pb_pb2_deploy_20251017_layout/scripts/: generate_editable_html.py  generate_final_html.py
pb_pb2_deploy_20251017_layout/src/models/: product_data.py
pb_pb2_deploy_20251017_layout/src/sheets_loader/: column_mapping.py  loader.py  product_builder.py
(+59 files in other folders)
