[tool.poetry]
name = "pb_pb2_new_page"
version = "0.1.0"
description = "Figma to HTML page builder with pixel-perfect conversion"
authors = ["younghoonjung"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"  # SPEC-HTML-001 요구사항
pydantic = "^2.12.2"  # SPEC-SHEETS-001: 최신 안정 버전
requests = ">=2.32.5"
jinja2 = ">=3.1.6"  # SPEC-HTML-001 필수
google-api-python-client = "^2.184.0"  # SPEC-SHEETS-001: Google Sheets API
google-auth = "^2.41.1"  # SPEC-SHEETS-001: Service Account 인증

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2"
pytest-cov = ">=7.0.0"
mypy = ">=1.18.2"
ruff = ">=0.14.0"
freezegun = ">=1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM"]
ignore = ["UP035", "UP006"]
